[package]
name = "compressor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
structopt = "0.3.23"
glob = "0.3.0"
image = "0.23.14"
time = "0.1"
rand = "0.3.16"
rayon = "1.5.1"
kmp = "0.1.1"
sliceslice = "0.3.1"
itertools = "0.10.1"
memchr = "2.4.1"